--- a/fontGenerator/fontGenerator/fontGenerator.vcxproj
+++ b/fontGenerator/fontGenerator/fontGenerator.vcxproj
@@ -94,6 +94,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
     <None Include="ReadMe.txt" />
     <None Include="res\fontGenerator.ico" />
     <None Include="res\fontGenerator.rc2" />
